Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -509,7 +509,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"Send an email to \" + liz  + \" at \" + email +  \" to say how nice it was meeting yesterday.\""
+    "\"Send an email to \" + liz kaplan + \" at \" +  +  \" to say how nice it was meeting yesterday.\""
    ]
   },
   {
